update addon button

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class = 'addon'>
           <div><input type='radio'></div>
           <div><img src='https://cdn.shopify.com/s/files/1/1847/3469/products/hair-mask_7b025128-3986-41fb-9216-6eb983bcfb9a.jpg?v=1599073171' class='prod-image'></div>
-          <div><p class = "addon-text">Add an extra Cel Hair Thickening Mask in this one-off deal for $15.98 (50% Off)</div>
+          <div><p class = "addon-text">Add Microsphere Thickening Serum in this one-time offer for $22.40 (60% Off)</div>
         </div>
       <button id='checkout'>Add To Cart <span class='total-cart'>$</span></button>
         </div>
