add to cart works for one-time purchases

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </p>
           </div>
         </div>
-        <button id="checkout">
+        <button id="add-to-cart">
           Add To Cart <span class="total-cart">$</span>
         </button>
       </div>
