changed fetch to jquery ajax

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <script src="script.js" defer></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -17,11 +18,7 @@
       <div class="product-container">
         <h2 class="subtitle">1. Quantity</h2>
         <div class="quantity">
-          <!--       <div class = 'product'>
-      <img src='https://cdn.shopify.com/s/files/1/1847/3469/products/sc.jpg?v=1608115503'/> 
-          <p>1 Set - Save 30%</p>
-          <p>$45.47</p>
-        </div> -->
+
         </div>
 
         <h2 class="subtitle">2. Package</h2>
@@ -45,7 +42,6 @@
           <div class="cost-container">
             <h4 class="reg-price"></h4>
             <h2 id="discount"></h2>
-            <!-- <h1 id='total-price'>$50.99</h1> -->
           </div>
         </div>
 
