--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="modal-content">
           <span class="close">&times;</span>
           <h3>Subscription Terms</h3>
-          <p>I agree this subscription will continue until I cancel. I may cancel at any time by calling + 1 877-8-MOKITA or by emailing <a href='mailto:support@mokita.md'>support@mokita.md</a> I will be charged the amount stated above at the interval stated above to the credit or debit card used to complete this purchase.</a></p>
+          <p>I agree this subscription will continue until I cancel. I may cancel at any time by calling + 1 877-8-MOKITA or by emailing <a href='mailto:hello@mokita.co'>hello@mokita.co</a> I will be charged the amount stated above at the interval stated above to the credit or debit card used to complete this purchase.</a></p>
           <p>Cancellations are effective at the end of the then-current subscription period. To avoid future charges, cancel 5 business days prior to renewal.</p>
         </div>
       </div>
@@ -46,7 +46,7 @@
         </div>
 
         <div class="addon">
-          <div><input type="radio" /></div>
+          <div><input type="radio" id ="addon-radio"/></div>
           <div>
             <img
               src="https://cdn.shopify.com/s/files/1/1847/3469/products/hair-mask_7b025128-3986-41fb-9216-6eb983bcfb9a.jpg?v=1599073171"
@@ -55,8 +55,8 @@
           </div>
           <div>
             <p class="addon-text">
-              Add Microsphere Thickening Serum in this one-time offer for $22.40
-              (60% Off)
+              Add Microsphere Thickening Serum in this one-time offer for <b>$22.40</b>
+              <b style="color: #e15e3a">(60% Off)</style></b>
             </p>
           </div>
         </div>
