added arrow image

--- a/index.html
+++ b/index.html
@@ -40,8 +40,14 @@
             </div>
           </form>
           <div class="cost-container">
-            <h4 class="reg-price"></h4>
+            <div id="arrow-container">
+
+            </div>
+            <div class = 'cost-info-container'>
+              <h4 class="reg-price"></h4>
             <h2 id="discount"></h2>
+            </div>
+
           </div>
         </div>
 
