--- a/index.html
+++ b/index.html
@@ -16,26 +16,30 @@
         </div>
       </div>
       <div class="product-container">
-        <h2 class="subtitle">1. Quantity</h2>
+        <h2 class="subtitle">1. Select Quantity</h2>
         <div class="quantity">
 
         </div>
 
-        <h2 class="subtitle">2. Package</h2>
+        <h2 class="subtitle">2. Purchase Options</h2>
 
         <div class="packages-container">
           <form>
             <div class="packages-header">
               <div class="package selected-package">
                 <input type="radio" checked />
+                <div class = 'vert-text'>
                 <h4 class="package-title">Subscribe</h4>
-                <h5 class="parens" id="sub-savings">(save $0.00)</h5>
+                <h5 class="parens" id="sub-savings">(save 30%)</h5>
+              </div>
               </div>
 
               <div class="package">
                 <input type="radio" />
-                <h4 class="package-title">One-time</h4>
-                <h5 class="parens" id="one-savings">(save $0.00)</h5>
+                <div class = 'vert-text'>
+                <h4 class="package-title">One-time purchase</h4>
+                <h5 class="parens" id="one-savings">(save 10%)</h5>
+                </div>
               </div>
             </div>
           </form>
@@ -61,7 +65,7 @@
           </div>
           <div>
             <p class="addon-text">
-              Add Microsphere Thickening Serum in this one-time offer for <b>$22.40</b>
+              Add our best-selling Microsphere Serum to your order for <b>$22.40</b>
               <b style="color: #e15e3a">(60% Off)</style></b>
             </p>
           </div>
